fixed alert race condition, smaller collapsed state

--- a/BlazarUI/app/stylus/components/inter-project-alert.styl
+++ b/BlazarUI/app/stylus/components/inter-project-alert.styl
@@ -1,16 +1,20 @@
 .inter-project-alert
+  transition height 1s
 
   &:hover
     cursor pointer
 
   h3
-    margin-top: 0
+    margin 0
+    font-size 14px
+    font-weight 400
+    display inline-block
 
     span
-      font-weight: 400
+      font-weight: 600
 
   .inter-project-alert__details
-    margin-top: 20px
+    margin-top 20px
 
     .inter-project-alert__upstream, .inter-project-alert__downstream, .inter-project-alert__cancelled
       margin 10px 10px 20px 10px
